fix(current): hours overflow

--- a/src/styles/_videos.scss
+++ b/src/styles/_videos.scss
@@ -1,5 +1,10 @@
 .videos-container {
     flex: 67.5;
+
+    .fullscreen {
+        flex: 99999999;
+    }
+
     // height: 100%;
     width: 100%;
     overflow: hidden;
